# sklearn_rest_demo

./: README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE
poc-test/: test_data.csv  test_k_means.py  test_mean_shift.py
source/sklearn_rest_demo/: manage.py
source/sklearn_rest_demo/home/: admin.py  models.py  urls.py  views.py
source/sklearn_rest_demo/home/migrations/: 0001_initial.py
source/sklearn_rest_demo/home/models/: __init__.py  common_model.py  mlmodel.py  mlmodeltype.py
source/sklearn_rest_demo/home/pages/: common_page.py  record_page.py  start_page.py
source/sklearn_rest_demo/sklearn_rest_demo/: asgi.py  settings.py  urls.py  wsgi.py
source/sklearn_rest_demo/static/js/: graph.js
